<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chart</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="study_num">学号</string>
    <string name="_password">密码</string>
    <string name="_submit">登录</string>
    <string name="_warn1">温馨提示：学号或登录名不能为空</string>
    <string name="_warn2">温馨提示：学号或密码错误</string>
    <string name="_loading">加载中…</string>
    <string name="_sure">确定</string>
    <string name="_cancel">取消</string>
    <string name="warn_network_error">加载失败，请检查网络或重试</string>
    <string name="warn_network_not_available">网络没有连接，请连接网络后重试</string>
    <string name="login_success">登录成功</string>
    <string name="send_success">发送成功</string>
    <string name="send_fail">发送失败</string>
    <string name="_back">返回</string>
    <string name="_main">主界面</string>
    <string name="image">图片</string>
    <string name="_send">发送</string>
    <string name="_face">表情</string>
    <string name="group_chart">群聊</string>
    <string name="group_1">group1</string>
    <string name="my_friends">我的好友</string>
    <string name="open_camear">打开相机</string>
    <string name="from_albums">从相册中选择</string>
    <string name="_upload">上传</string>
    <string name="upload_announcement">上传公告</string>
    <string name="group_announcement">群公告</string>
    <string name="_from">来自：</string>
    <string name="hello_label">你好，</string>
    <string name="re_login">确定要退出，重新登录吗？</string>

</resources>
