<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_back"
            style="@style/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_back"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/upload_announcement"
            android:textColor="@color/blue"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="vertical" >

            <!-- 打开摄像头 -->

            <LinearLayout
                android:id="@+id/layout_openCamear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/clickable_layout"
                android:clickable="true"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/open_camear"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/ligit_grey" />

            <!-- 从相册中选择 -->

            <LinearLayout
                android:id="@+id/layout_fromAlbums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/clickable_layout"
                android:clickable="true"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/from_albums"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/ligit_grey" />

            <LinearLayout
                android:id="@+id/layout_context"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="300dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/_back" />

                <EditText
                    android:id="@+id/edtxt_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal|top" >

                <Button
                    android:id="@+id/btn_upload"
                    style="@style/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_upload"
                    android:textColor="@color/grey"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>