<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="left"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:shadowColor="#000000"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="-1"
            android:singleLine="true"
            android:text="@string/study_num"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtTxt_studyId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/input_background"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="11"
            android:minHeight="42dip"
            android:minWidth="200dip"
            android:paddingLeft="18dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:shadowColor="#000000"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="-1"
            android:singleLine="true"
            android:text="@string/_password"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtTxt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dip"
            android:layout_marginTop="4dip"
            android:background="@drawable/input_background"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="11"
            android:minHeight="42dip"
            android:minWidth="200dip"
            android:paddingLeft="18dip"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_warn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="@color/red_warn"
            android:textSize="14sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal|top" >

        <Button
            android:id="@+id/btn_submit"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_submit"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>